--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,13 +15,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Go build
-      uses: ouzi-dev/go-make-action@v1.1.0
-      with:
-        # Make target to run
-        target: build
+      run: make build
 
     - name: Go test
-      uses: ouzi-dev/go-make-action@v1.1.0
-      with:
-        # Make target to run
-        target: test
+      run: make test
