--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,9 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
     - name: Go fmt
-      run: make fmt
+      run: |
+        go mod download
+        make fmt
     - name: Go build
       run: make build
     - name: Go test
